# MagikTool

./: .gitignore  Cargo.toml  LICENSE
src/: image.rs  logic.rs  main.rs  operations.rs  parser.rs
src/err_handling/: functions.rs
src/operations/: mod.rs
src/operations/convertion/: functions.rs
src/operations/generics/: functions.rs
src/operations/image/: functions.rs
src/operations/path/: functions.rs
