[package]
name = "magik"
version = "0.2.0"
edition = "2021"

[dependencies]
argparse = "0.2.2"
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread", "io-std", "io-util", "macros"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
